# json_logger

./: CMakeLists.txt  README.org
json_logger/: CMakeLists.txt  config.cpp  config.hpp.in  json_logger.hpp  json_logger.json
json_logger/details/: Log.cpp  Log.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  Shim.cpp  Shim.hpp  TimeStamper.cpp  TimeStamper.hpp  import.hpp  json.hpp
json_logger_testing/: CMakeLists.txt  log_test.cpp  schema_test.cpp  time_stamper_test.cpp
